# pi-web

./: .codex_pi_known_hosts  .gitignore  README.md  auth.py  change_acct.py  main.py  move-stuff.sh  netctl.py  pyproject.toml  scan_eth0.sh  webapp  webapp-in-sudoers  webapp.service
templates/: dashboard.html  login.html  styles.css
