[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pam>=0.2.0",
    "python-multipart>=0.0.30",
    "six>=1.17.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
